<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:background="@color/transparentBackgroundDangnhap"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingBottom="20dp"
        android:paddingRight="50dp">

        <TextView
            android:textSize="30sp"
            android:textColor="@color/colorAccent"
            android:text="Khổi phục mật khẩu"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView

            android:textColor="@color/colorAccent"
            android:text="@string/chuoikhoiphucMK"
            android:layout_margin="10dp"

            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/edtEmailKhoiPhuc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorAccent"
            android:drawableLeft="@drawable/ic_email_white_24dp"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:textColor="@color/colorAccent"
            android:textColorHint="@color/colorAccent" />

        <Button

            android:id="@+id/btnKhoiPhucMK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/radius_button"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:text="Khôi phục mật khẩu"
            android:textColor="@android:color/background_light" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <TextView
                android:layout_weight="1"
                android:text="@string/DangKy"
                android:id="@+id/txtDangKyKP"
                android:textColor="@color/colorAccent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <TextView
                android:gravity="right"
                android:textColor="@color/colorAccent"
                android:text="@string/DangNhap"
                android:id="@+id/txtDangNhapKP"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>