<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorBackgroundTrangChu">



    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:layout_height="40dp" >

        <RadioButton
            android:id="@+id/rbMoiNhat"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:gravity="center"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:button="@android:color/transparent"
            android:background="@drawable/change_backgroundtab_trangchu"
            android:text="@string/moinhat" />
        <View
            android:background="@color/colorBackgroundTrangChu"
            android:layout_width="2dp"
            android:layout_height="match_parent">

        </View>
        <RadioButton
            android:id="@+id/rbFood"

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:button="@android:color/transparent"
            android:background="@drawable/change_backgroundtab_trangchu"
            android:text="@string/Food" />
        <View
            android:background="@color/colorBackgroundTrangChu"
            android:layout_width="2dp"
            android:layout_height="match_parent">

        </View>
        <RadioButton
            android:id="@+id/rbKhuVuc"
            android:gravity="center"
            android:textColor="@drawable/changetext_tab_trangchu"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:button="@android:color/transparent"
            android:layout_width="match_parent"
            android:background="@drawable/change_backgroundtab_trangchu"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/khuvuc" />
    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:id="@+id/nestScrollViewFood"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="Nearby"
                    android:drawableLeft="@drawable/nearby"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"/>
                <Button
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/order"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:text="Order Delivery"
                    android:layout_width="match_parent"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:layout_margin="5dp"
                    android:text="Đánh giá"
                    android:drawableLeft="@drawable/review"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"/>
                <Button
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/user"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:text="Top Member"
                    android:layout_width="match_parent"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">
                <Button
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/blog"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:text="Blogs"
                    android:background="@color/colorAccent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"/>
                <Button
                    android:background="@color/colorAccent"
                    android:layout_weight="1"
                    android:drawableLeft="@drawable/gameandfun"
                    android:padding="10dp"
                    android:gravity="left|center"
                    android:drawablePadding="10dp"
                    android:layout_margin="5dp"
                    android:text="Games and Fun"
                    android:layout_width="match_parent"
                    android:textAllCaps="false"
                    android:layout_height="wrap_content" />

            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycleFood"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
            <ProgressBar
                android:id="@+id/PGLoad"
                android:layout_marginTop="5dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


</LinearLayout>